--- a/public/index-table_search.html
+++ b/public/index-table_search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-<script src="index.js"></script>
+<script src="../index.js"></script>
 <link rel="stylesheet" href="index.css">
 <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
